Fix: Grid align

--- a/app/styles/empower.module.scss
+++ b/app/styles/empower.module.scss
@@ -50,7 +50,18 @@
   @include grid-columns(1, 52px);
 
   @include respond-md {
+    justify-content: safe center;
     @include grid-columns(3, 52px);
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 130px;
+    padding-top: 80px;
+  }
+
+  @include respond-xl {
+    justify-content: safe center;
+    display: flex;
+    gap: 52px;
     padding-left: 100px;
     padding-right: 100px;
     padding-bottom: 130px;
@@ -80,6 +91,7 @@
   padding-right: 30px;
   width: 100%;
   height: 321px;
+  flex-shrink: 0;
 
   @include respond-md {
     padding-top: 42px;
